--- a/src/app/wizard/wizard.component.css
+++ b/src/app/wizard/wizard.component.css
@@ -22,7 +22,7 @@
 input, button {
   border-radius: 5px;
   border: 2px solid var(--theme-color-dark, #315a36);
-  box-shadow: 3px 3px 10px #888888;
+  box-shadow: 3px 3px 10px var(--theme-color-shade, #888888);
   display: block;
   width: 150px;
   height: 2rem;
@@ -33,8 +33,9 @@ button {
   padding: 5px 10px;
 }
 
-button:hover {
-  box-shadow: 3px 3px 10px #888888, inset 0 0 20px white;
+button.button-refresh {
+  background-color: white;
+  width: auto;
 }
 
 .score-grid {
@@ -43,12 +44,16 @@ button:hover {
 }
 
 .score-grid-flex {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
 }
 
 .score-grid .player-card {
   width: 80%;
   padding: 10px;
+}
+
+#p3-waiting {
+  height: 80vh;
 }
 
 /* HACK need to fix - commented out for now */
